# stoichiometric

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs  positions.rs
decoder/: Cargo.toml
decoder/src/: main.rs  request_handler.tsx
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
rtm/custom/: add_liquidity_at_steps_no_pos.rtm  add_liquidity_at_steps_with_pos.rtm
scrypto/: Cargo.toml
scrypto/dao/: Cargo.toml
scrypto/dex/: Cargo.toml
scrypto/dex/rtm/custom/: add_liquidity_at_steps_no_pos.rtm  add_liquidity_at_steps_with_pos.rtm
scrypto/dex/src/: lib.rs  observation_array.rs  oracle.rs  pool.rs  pool_step.rs  router.rs
scrypto/dex/tests/: unit_tests.rs
scrypto/dex/tests/router_sqrt/: mod.rs
scrypto/dex/tests/utils/: mod.rs
scrypto/stablecoin/: Cargo.toml
scrypto/stablecoin/src/: constants.rs  flash_mint.rs  issuer.rs  lender.rs  lib.rs  loan.rs  loaner.rs
scrypto/stablecoin/tests/: unit_tests.rs
scrypto/stablecoin/tests/dumb_oracle/package/: Cargo.toml
scrypto/stablecoin/tests/dumb_oracle/package/src/: lib.rs
scrypto/stablecoin/tests/dumb_oracle_sqrt/: mod.rs
scrypto/stablecoin/tests/issuer_sqrt/: mod.rs
scrypto/stablecoin/tests/issuer_state/: mod.rs
scrypto/stablecoin/tests/utils/: mod.rs
scrypto/tests/: Cargo.toml
src/: constants.rs  decimal_maths.rs  lib.rs  observation_array.rs  oracle.rs  pool.rs  pool_step.rs  position.rs  router.rs  utils.rs
tests/: unit_tests.rs
tests/pool_state/: mod.rs
tests/utils/: mod.rs
(+108 files in other folders)
